localization/v2.4.x/site/it/reference/sys_config/configure_datanode.md
---
id: configure_datanode.md
related_key: configure
group: system_configuration.md
summary: Scoprite come configurare dataNode per Milvus.
title: ''
---
<h1 id="dataNode-related-Configurations" class="common-anchor-header">Configurazioni relative ai dataNode<button data-href="#dataNode-related-Configurations" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><h2 id="dataNodedataSyncflowGraphmaxQueueLength" class="common-anchor-header"><code translate="no">dataNode.dataSync.flowGraph.maxQueueLength</code><button data-href="#dataNodedataSyncflowGraphmaxQueueLength" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.flowGraph.maxQueueLength">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Lunghezza massima della coda dei task nel diagramma di flusso      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodedataSyncflowGraphmaxParallelism" class="common-anchor-header"><code translate="no">dataNode.dataSync.flowGraph.maxParallelism</code><button data-href="#dataNodedataSyncflowGraphmaxParallelism" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.flowGraph.maxParallelism">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Numero massimo di task eseguiti in parallelo nel diagramma di flusso      </td>
      <td>1024</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodedataSyncmaxParallelSyncMgrTasks" class="common-anchor-header"><code translate="no">dataNode.dataSync.maxParallelSyncMgrTasks</code><button data-href="#dataNodedataSyncmaxParallelSyncMgrTasks" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.maxParallelSyncMgrTasks">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Il numero massimo di task di sincronizzazione concomitanti del datanode sync mgr a livello globale      </td>
      <td>256</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodedataSyncskipModeenable" class="common-anchor-header"><code translate="no">dataNode.dataSync.skipMode.enable</code><button data-href="#dataNodedataSyncskipModeenable" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.skipMode.enable">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Supporta il salto di alcuni messaggi timetick per ridurre l'uso della CPU   </td>
      <td>vero</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodedataSyncskipModeskipNum" class="common-anchor-header"><code translate="no">dataNode.dataSync.skipMode.skipNum</code><button data-href="#dataNodedataSyncskipModeskipNum" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.skipMode.skipNum">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Consuma uno per ogni n record saltati      </td>
      <td>4</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodedataSyncskipModecoldTime" class="common-anchor-header"><code translate="no">dataNode.dataSync.skipMode.coldTime</code><button data-href="#dataNodedataSyncskipModecoldTime" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.dataSync.skipMode.coldTime">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Attiva la modalità di salto dopo che ci sono solo msg timetick per x secondi      </td>
      <td>60</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodesegmentinsertBufSize" class="common-anchor-header"><code translate="no">dataNode.segment.insertBufSize</code><button data-href="#dataNodesegmentinsertBufSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.segment.insertBufSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>Dimensione massima di ciascun file binlog in un segmento bufferizzato in memoria. I file binlog la cui dimensione supera questo valore vengono scaricati nel servizio MinIO o S3.</li>      
        <li>Unità: Byte</li>      
        <li>L'impostazione di questo parametro troppo piccolo fa sì che il sistema memorizzi una piccola quantità di dati troppo frequentemente. L'impostazione di un valore troppo alto aumenta la richiesta di memoria da parte del sistema.</li>      </td>
      <td>16777216</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodesegmentdeleteBufBytes" class="common-anchor-header"><code translate="no">dataNode.segment.deleteBufBytes</code><button data-href="#dataNodesegmentdeleteBufBytes" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.segment.deleteBufBytes">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Dimensione massima del buffer in byte per il flush del per un singolo canale, predefinita come 16 MB.   </td>
      <td>16777216</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodesegmentsyncPeriod" class="common-anchor-header"><code translate="no">dataNode.segment.syncPeriod</code><button data-href="#dataNodesegmentsyncPeriod" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.segment.syncPeriod">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Periodo di sincronizzazione dei segmenti se il buffer non è vuoto.      </td>
      <td>600</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodememoryforceSyncEnable" class="common-anchor-header"><code translate="no">dataNode.memory.forceSyncEnable</code><button data-href="#dataNodememoryforceSyncEnable" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.memory.forceSyncEnable">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Impostare true per forzare la sincronizzazione se l'uso della memoria è troppo elevato      </td>
      <td>vero</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodememoryforceSyncSegmentNum" class="common-anchor-header"><code translate="no">dataNode.memory.forceSyncSegmentNum</code><button data-href="#dataNodememoryforceSyncSegmentNum" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.memory.forceSyncSegmentNum">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        numero di segmenti da sincronizzare, i segmenti con il buffer più grande saranno sincronizzati.      </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodememorycheckInterval" class="common-anchor-header"><code translate="no">dataNode.memory.checkInterval</code><button data-href="#dataNodememorycheckInterval" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.memory.checkInterval">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        intervallo di tempo per controllare l'uso della memoria del datanode, in millisecondi      </td>
      <td>3000</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodememoryforceSyncWatermark" class="common-anchor-header"><code translate="no">dataNode.memory.forceSyncWatermark</code><button data-href="#dataNodememoryforceSyncWatermark" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.memory.forceSyncWatermark">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        filigrana di memoria per lo standalone; al raggiungimento di questa filigrana, i segmenti saranno sincronizzati.      </td>
      <td>0.5</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelworkPoolSize" class="common-anchor-header"><code translate="no">dataNode.channel.workPoolSize</code><button data-href="#dataNodechannelworkPoolSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.workPoolSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>specifica la dimensione del pool di lavoro globale di tutti i canali</li>      
        <li>se questo parametro è &lt;= 0, sarà impostato come il numero massimo di CPU che possono essere in esecuzione</li>      
        <li>si suggerisce di impostarlo più grande su grandi numeri di collezioni per evitare blocchi</li>      </td>
      <td>-1</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelupdateChannelCheckpointMaxParallel" class="common-anchor-header"><code translate="no">dataNode.channel.updateChannelCheckpointMaxParallel</code><button data-href="#dataNodechannelupdateChannelCheckpointMaxParallel" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.updateChannelCheckpointMaxParallel">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>specifica la dimensione del pool di lavoro globale per l'aggiornamento dei checkpoint del canale</li>      
        <li>se questo parametro è &lt;= 0, verrà impostato come 10</li>      </td>
      <td>10</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelupdateChannelCheckpointInterval" class="common-anchor-header"><code translate="no">dataNode.channel.updateChannelCheckpointInterval</code><button data-href="#dataNodechannelupdateChannelCheckpointInterval" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.updateChannelCheckpointInterval">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        la durata dell'intervallo (in secondi) per l'aggiornamento del checkpoint di ciascun canale da parte del datanode      </td>
      <td>60</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelupdateChannelCheckpointRPCTimeout" class="common-anchor-header"><code translate="no">dataNode.channel.updateChannelCheckpointRPCTimeout</code><button data-href="#dataNodechannelupdateChannelCheckpointRPCTimeout" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.updateChannelCheckpointRPCTimeout">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        timeout in secondi per la chiamata RPC UpdateChannelCheckpoint      </td>
      <td>20</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelmaxChannelCheckpointsPerPRC" class="common-anchor-header"><code translate="no">dataNode.channel.maxChannelCheckpointsPerPRC</code><button data-href="#dataNodechannelmaxChannelCheckpointsPerPRC" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.maxChannelCheckpointsPerPRC">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Numero massimo di checkpoint del canale per UpdateChannelCheckpoint RPC.      </td>
      <td>128</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodechannelchannelCheckpointUpdateTickInSeconds" class="common-anchor-header"><code translate="no">dataNode.channel.channelCheckpointUpdateTickInSeconds</code><button data-href="#dataNodechannelchannelCheckpointUpdateTickInSeconds" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.channel.channelCheckpointUpdateTickInSeconds">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La frequenza, in secondi, con cui il programma di aggiornamento dei punti di controllo del canale esegue gli aggiornamenti.      </td>
      <td>10</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeimportmaxConcurrentTaskNum" class="common-anchor-header"><code translate="no">dataNode.import.maxConcurrentTaskNum</code><button data-href="#dataNodeimportmaxConcurrentTaskNum" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.import.maxConcurrentTaskNum">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Il numero massimo di attività di importazione/pre-importazione che possono essere eseguite simultaneamente su un datanode.      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeimportmaxImportFileSizeInGB" class="common-anchor-header"><code translate="no">dataNode.import.maxImportFileSizeInGB</code><button data-href="#dataNodeimportmaxImportFileSizeInGB" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.import.maxImportFileSizeInGB">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La dimensione massima del file (in GB) per un file di importazione, dove per file di importazione si intende un file basato su righe o un insieme di file basati su colonne.      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeimportreadBufferSizeInMB" class="common-anchor-header"><code translate="no">dataNode.import.readBufferSizeInMB</code><button data-href="#dataNodeimportreadBufferSizeInMB" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.import.readBufferSizeInMB">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La dimensione del blocco di dati (in MB) letto da chunk manager dal datanode durante l'importazione.      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodecompactionlevelZeroBatchMemoryRatio" class="common-anchor-header"><code translate="no">dataNode.compaction.levelZeroBatchMemoryRatio</code><button data-href="#dataNodecompactionlevelZeroBatchMemoryRatio" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.compaction.levelZeroBatchMemoryRatio">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Il rapporto minimo di memoria libera per la compattazione di livello zero eseguita in modalità batch     </td>
      <td>0.05</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodecompactionlevelZeroMaxBatchSize" class="common-anchor-header"><code translate="no">dataNode.compaction.levelZeroMaxBatchSize</code><button data-href="#dataNodecompactionlevelZeroMaxBatchSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.compaction.levelZeroMaxBatchSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La dimensione massima del batch si riferisce al numero massimo di segmenti L1/L2 in un batch quando si esegue la compattazione L0. Il valore predefinito è -1, qualsiasi valore inferiore a 1 significa che non ci sono limiti. Intervallo valido: &gt;= 1.  </td>
      <td>-1</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodegracefulStopTimeout" class="common-anchor-header"><code translate="no">dataNode.gracefulStopTimeout</code><button data-href="#dataNodegracefulStopTimeout" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.gracefulStopTimeout">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        secondi. forzare l'arresto del nodo senza graceful stop    </td>
      <td>1800</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeslotslotCap" class="common-anchor-header"><code translate="no">dataNode.slot.slotCap</code><button data-href="#dataNodeslotslotCap" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.slot.slotCap">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Numero massimo di compiti (ad esempio, compattazione, importazione) che possono essere eseguiti simultaneamente su un datanode.      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeclusteringCompactionmemoryBufferRatio" class="common-anchor-header"><code translate="no">dataNode.clusteringCompaction.memoryBufferRatio</code><button data-href="#dataNodeclusteringCompactionmemoryBufferRatio" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.clusteringCompaction.memoryBufferRatio">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Il rapporto del buffer di memoria della compattazione del clustering. I dati più grandi della soglia saranno scaricati in memoria.      </td>
      <td>0.1</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeclusteringCompactionworkPoolSize" class="common-anchor-header"><code translate="no">dataNode.clusteringCompaction.workPoolSize</code><button data-href="#dataNodeclusteringCompactionworkPoolSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.clusteringCompaction.workPoolSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Dimensione del pool di lavoratori per un lavoro di compattazione del clustering.      </td>
      <td>8</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeip" class="common-anchor-header"><code translate="no">dataNode.ip</code><button data-href="#dataNodeip" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.ip">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Indirizzo TCP/IP del dataNode. Se non viene specificato, viene utilizzato il primo indirizzo non ciclabile.      </td>
      <td></td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodeport" class="common-anchor-header"><code translate="no">dataNode.port</code><button data-href="#dataNodeport" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.port">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Porta TCP del DataNode      </td>
      <td>21124</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodegrpcserverMaxSendSize" class="common-anchor-header"><code translate="no">dataNode.grpc.serverMaxSendSize</code><button data-href="#dataNodegrpcserverMaxSendSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.grpc.serverMaxSendSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Dimensione massima di ciascuna richiesta RPC che il dataNode può inviare, unità: byte    </td>
      <td>536870912</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodegrpcserverMaxRecvSize" class="common-anchor-header"><code translate="no">dataNode.grpc.serverMaxRecvSize</code><button data-href="#dataNodegrpcserverMaxRecvSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.grpc.serverMaxRecvSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La dimensione massima di ogni richiesta RPC che il dataNode può ricevere, unità: byte    </td>
      <td>268435456</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodegrpcclientMaxSendSize" class="common-anchor-header"><code translate="no">dataNode.grpc.clientMaxSendSize</code><button data-href="#dataNodegrpcclientMaxSendSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.grpc.clientMaxSendSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Dimensione massima di ogni richiesta RPC che i client del dataNode possono inviare, unità: byte    </td>
      <td>268435456</td>
    </tr>
  </tbody>
</table>
<h2 id="dataNodegrpcclientMaxRecvSize" class="common-anchor-header"><code translate="no">dataNode.grpc.clientMaxRecvSize</code><button data-href="#dataNodegrpcclientMaxRecvSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="dataNode.grpc.clientMaxRecvSize">
  <thead>
    <tr>
      <th class="width80">Descrizione</th>
      <th class="width20">Valore predefinito</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        La dimensione massima di ogni richiesta RPC che i client sul dataNode possono ricevere, unità: byte    </td>
      <td>536870912</td>
    </tr>
  </tbody>
</table>
